k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: internship
  creationTimestamp: null
  labels:
    name: hafsa
  name: hafsa-internship
spec:
  progressDeadleSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: hafsa-internship
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: hafsa-internship
    spec:
      containers:
      - name: hafsa-internship
        image: docker.et3.co/internship.hafsa:latest
        command: ["sh"]
        args: ["runserver.sh"]
        volumeMounts:
        - mountPath: /usr/src/app/data
          name: hafsa-internship-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: hafsa-internship-volume-mount
        persistentVolumeClaim:
          claimName: hafsa-internship-pvc
