k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: internship
  name: hafsa-internship
  labels:
    service: hafsa-internship
spec:
  selector:
    service: hafsa-internship
  type: ClusterIP
  ports:
    - name: web
      port: 8000
