k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hafsa-internship
  namespace: internship
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    service: hafsa-internship
spec:
  tls:
  - hosts:
    - hafsa.internship.et3.co
    secretName: hafsa.internship.et3.co-cert
  rules:
  - host: hafsa.internship.et3.co
    http:
      paths:
      - path: /
        backend:
          serviceName: hafsa-internship
          servicePort: 8000
